<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adView"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">


        <!--SCROLLABLE_STUFF-->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!--<android.support.design.widget.AppBarLayout-->
            <!--android:id="@+id/app_bar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingTop="@dimen/appbar_padding_top"-->
            <!--android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">-->

            <!--
            Visible tabView
            need @android:color/transparent
            -->
            <!--<android.support.design.widget.CollapsingToolbarLayout-->
            <!--android:id="@+id/collapsing_toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:fitsSystemWindows="true"-->
            <!--app:contentScrim="#99000000"-->
            <!--app:expandedTitleMarginStart="@dimen/expanded_toolbar_title_margin_start"-->

            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->


            <!--content-->


            <!--<ImageButton-->
            <!--android:id="@+id/image_beast"-->
            <!--android:layout_width="44dp"-->
            <!--android:layout_height="44dp"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:background="@null"-->
            <!--android:contentDescription="@string/app_name"-->
            <!--android:tint="@android:color/white"-->
            <!--app:srcCompat="@drawable/ic_aries" />-->

            <!--
            android:layout_gravity="bottom" - при скроле табы прижмутся к низу тулбара а не уедут
            -->
            <!--android:layout_margin="@dimen/activity_horizontal_margin"-->

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
                app:title="@string/app_name">
                <!--<android.support.v7.widget.Toolbar-->
                <!--android:id="@+id/toolbar"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="?attr/actionBarSize"-->
                <!--android:background="?attr/colorPrimary"-->
                <!--android:minHeight="?attr/actionBarSize"-->
                <!--app:layout_collapseMode="pin"-->
                <!--app:layout_scrollFlags="scroll"-->
                <!--app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"-->
                <!--app:title="@string/app_name">-->

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/top_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_collapseMode="pin"
                app:tabIndicatorColor="?attr/colorPrimary"
                app:tabIndicatorHeight="3dp"
                app:tabMode="scrollable"
                app:tabPaddingEnd="12dp"
                app:tabPaddingStart="12dp"
                app:tabSelectedTextColor="@android:color/white"
                app:tabTextColor="#ff424242"
                tools:visibility="visible"
                android:weightSum="5">

                <Button
                    android:id="@+id/btn_color"
                    style="@style/buttonShape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_color"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/tab_color" />

                <Button
                    android:id="@+id/btn_size"
                    style="@style/buttonShape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_size"
                    android:text="@string/tab_size" />

                <Button
                    android:id="@+id/btn_imprint"
                    style="@style/buttonShape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/pill_red"
                    android:text="@string/tab_imprint" />


                <Button
                    android:id="@+id/btn_shape"
                    style="@style/buttonShape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_shape"
                    android:text="@string/tab_shape" />

                <Button
                    android:id="@+id/btn_scoring"
                    style="@style/buttonShape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_scoring"
                    android:text="@string/tab_scoring" />

                <!--                    <Button-->
                <!--                        android:id="@+id/btn_search"-->
                <!--                        style="@style/buttonShape"-->
                <!--                        android:layout_width="0dp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_weight="1"-->
                <!--                        android:drawableTop="@drawable/ic_search"-->
                <!--                        android:text="@string/tab_search"-->
                <!--                        android:visibility="gone" />-->
            </LinearLayout>
            <!--end_content-->

            <!--</android.support.design.widget.CollapsingToolbarLayout>-->
        </com.google.android.material.appbar.AppBarLayout>


        <!--<include layout="@layout/toolbar_tabbed" />-->
        <!--content_scrolling-->


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:background="@android:color/holo_green_dark" />

        <!--end_content_scrolling-->


        <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--android:visibility="gone"-->
        <!--app:layout_anchor="@id/app_bar"-->
        <!--app:layout_anchorGravity="bottom|end"-->
        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->


        <!--</android.support.design.widget.CoordinatorLayout>-->
        <!--END_SCROLLABLE_STUFF-->


        <ProgressBar
            android:id="@+id/scan_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="-4dp"
            android:foregroundGravity="bottom"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/replyStatus"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />

    <TextView
        android:id="@+id/replyStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:gravity="center_vertical|end"
        android:padding="4dp"
        android:textColor="#FF6D00"
        android:textSize="15sp"
        tools:text="222222222222222222" />
</RelativeLayout>