...
                    android:tag="GRAY" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.walhalla.pillfinder.ui.custom.SquareToggleButton
                    android:id="@+id/ib4"
...
                    style="@style/OurThemeName"
                    android:background="@drawable/btn_toggle_bg_orange"
                    android:contentDescription="@string/paint"
                    android:tag="ORANGE" />

                <com.walhalla.pillfinder.ui.custom.SquareToggleButton
                    android:id="@+id/ib6"
                    style="@style/OurThemeName"
                    android:background="@drawable/btn_toggle_bg_pink"
                    android:contentDescription="@string/paint"
                    android:tag="PINK" />

                <com.walhalla.pillfinder.ui.custom.SquareToggleButton
...
