<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="r1" translatable="false">ca-app-pub-5111357348858303/7927594279</string>
    <string name="app_name" translatable="false">Pill Identifier</string>

    <string name="hello_world"><b>Note:</b> All fields are optional. Use the pill finder to identify medications by visual appearance or name.
All Rx and OTC drugs in the US are required by the FDA to have an imprint.
If your pill has no imprint it could be a vitamin, diet/herbal/energy pill, illicit or foreign drug. \n<s>Example:</s> color - red and white, size 21 mm, or red and white imprint - 590 etc.
</string>

    <string name="couldnt_rate">couldnt_rate</string>
    <string name="action_settings">Settings</string>
    <string name="paint">Paint</string>
    <string name="activity_two">ActivityTwo</string>

    <string name="bg_color">#370903</string>

    <string name="text_footer"><u>National Library of Medicine | Lister Hill National Center for Biomedical Communications
        | Office of High Performance Computing and Communications | Medicos Consultants LLC</u>
...
